Colab を使用して作成されました

--- a/text1.ipynb
+++ b/text1.ipynb
@@ -77,10 +77,22 @@
         "print(\"Hello, World!\")"
       ],
       "metadata": {
-        "id": "UpqqXelHAiRj"
+        "id": "UpqqXelHAiRj",
+        "outputId": "375936c6-afeb-4021-c21c-507e1e1da762",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello, World!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -104,13 +116,26 @@
       "cell_type": "code",
       "source": [
         "%%tee student_output\n",
-        "# --- この下に課題のコードを書いてください ---\n"
+        "# --- この下に課題のコードを書いてください ---\n",
+        "print(\"Hello, World\")"
       ],
       "metadata": {
-        "id": "ioQWGyXN_-J6"
+        "id": "ioQWGyXN_-J6",
+        "outputId": "1a91b8e4-1a16-4a7c-88bd-d8f7332608d0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "UsageError: Cell magic `%%tee` not found.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -667,7 +692,7 @@
       "metadata": {
         "id": "UCmT5b54ImoM"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     }
   ]
