Colab を使用して作成されました

--- a/text1.ipynb
+++ b/text1.ipynb
@@ -26,6 +26,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#@title 採点プログラム\n",
         "from IPython import get_ipython\n",
         "from IPython.core import magic_arguments\n",
         "from IPython.core.magic import register_cell_magic\n",
@@ -65,7 +66,8 @@
         "    io()"
       ],
       "metadata": {
-        "id": "FTYIClvow9cM"
+        "id": "FTYIClvow9cM",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
