Colab を使用して作成されました

--- a/text2.ipynb
+++ b/text2.ipynb
@@ -22,6 +22,64 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# 採点プログラムの起動のために直下の三角ボタンを押してプログラムを実行してください"
+      ],
+      "metadata": {
+        "id": "qd4EBFn6zIbL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title 採点プログラムを起動\n",
+        "from IPython import get_ipython\n",
+        "from IPython.core import magic_arguments\n",
+        "from IPython.core.magic import register_cell_magic\n",
+        "from IPython.utils.capture import capture_output\n",
+        "\n",
+        "@magic_arguments.magic_arguments()\n",
+        "@magic_arguments.argument('output', type=str, default='', nargs='?',\n",
+        "    help=\"\"\"The name of the variable in which to store output.\n",
+        "    This is a utils.io.CapturedIO object with stdout/err attributes\n",
+        "    for the text of the captured output.\n",
+        "    CapturedOutput also has a show() method for displaying the output,\n",
+        "    and __call__ as well, so you can use that to quickly display the\n",
+        "    output.\n",
+        "    If unspecified, captured output is discarded.\n",
+        "    \"\"\"\n",
+        ")\n",
+        "@magic_arguments.argument('--no-stderr', action=\"store_true\",\n",
+        "    help=\"\"\"Don't capture stderr.\"\"\"\n",
+        ")\n",
+        "@magic_arguments.argument('--no-stdout', action=\"store_true\",\n",
+        "    help=\"\"\"Don't capture stdout.\"\"\"\n",
+        ")\n",
+        "@magic_arguments.argument('--no-display', action=\"store_true\",\n",
+        "    help=\"\"\"Don't capture IPython's rich display.\"\"\"\n",
+        ")\n",
+        "@register_cell_magic\n",
+        "def tee(line, cell):\n",
+        "    args = magic_arguments.parse_argstring(tee, line)\n",
+        "    out = not args.no_stdout\n",
+        "    err = not args.no_stderr\n",
+        "    disp = not args.no_display\n",
+        "    with capture_output(out, err, disp) as io:\n",
+        "        get_ipython().run_cell(cell)\n",
+        "    if args.output:\n",
+        "        get_ipython().user_ns[args.output] = io\n",
+        "\n",
+        "    io()"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "1f9FT0W3zFCU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# プログラミングの基本 第2回 後半"
       ],
       "metadata": {
@@ -369,71 +427,6 @@
         "id": "RjaHXpv3lPQP"
       },
       "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## ここ以下は無視してください"
-      ],
-      "metadata": {
-        "id": "-Ry4cvMqU_0q"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "以下のコードは採点用のプログラムのために用意したものなので読まなくて良いです。ないものと思って扱ってください。"
-      ],
-      "metadata": {
-        "id": "BX81y1n5InYV"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from IPython import get_ipython\n",
-        "from IPython.core import magic_arguments\n",
-        "from IPython.core.magic import register_cell_magic\n",
-        "from IPython.utils.capture import capture_output\n",
-        "\n",
-        "@magic_arguments.magic_arguments()\n",
-        "@magic_arguments.argument('output', type=str, default='', nargs='?',\n",
-        "    help=\"\"\"The name of the variable in which to store output.\n",
-        "    This is a utils.io.CapturedIO object with stdout/err attributes\n",
-        "    for the text of the captured output.\n",
-        "    CapturedOutput also has a show() method for displaying the output,\n",
-        "    and __call__ as well, so you can use that to quickly display the\n",
-        "    output.\n",
-        "    If unspecified, captured output is discarded.\n",
-        "    \"\"\"\n",
-        ")\n",
-        "@magic_arguments.argument('--no-stderr', action=\"store_true\",\n",
-        "    help=\"\"\"Don't capture stderr.\"\"\"\n",
-        ")\n",
-        "@magic_arguments.argument('--no-stdout', action=\"store_true\",\n",
-        "    help=\"\"\"Don't capture stdout.\"\"\"\n",
-        ")\n",
-        "@magic_arguments.argument('--no-display', action=\"store_true\",\n",
-        "    help=\"\"\"Don't capture IPython's rich display.\"\"\"\n",
-        ")\n",
-        "@register_cell_magic\n",
-        "def tee(line, cell):\n",
-        "    args = magic_arguments.parse_argstring(tee, line)\n",
-        "    out = not args.no_stdout\n",
-        "    err = not args.no_stderr\n",
-        "    disp = not args.no_display\n",
-        "    with capture_output(out, err, disp) as io:\n",
-        "        get_ipython().run_cell(cell)\n",
-        "    if args.output:\n",
-        "        get_ipython().user_ns[args.output] = io\n",
-        "\n",
-        "    io()"
-      ],
-      "metadata": {
-        "id": "UCmT5b54ImoM"
-      },
-      "execution_count": 1,
       "outputs": []
     }
   ]
