Colab を使用して作成されました

--- a/text2.ipynb
+++ b/text2.ipynb
@@ -8,7 +8,8 @@
         "JG6SlG2hYWcT",
         "PIxaFBw9ZqjY",
         "-Ry4cvMqU_0q"
-      ]
+      ],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -19,6 +20,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/aiko-63180/notebooks/blob/main/text2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
