Colab を使用して作成されました

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +17,74 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/aiko-63180/notebooks/blob/main/problems.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 採点プログラムの起動のために直下の三角ボタンを押してプログラムを実行してください"
+      ],
+      "metadata": {
+        "id": "t6nvD62Dz3Q7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title 採点プログラムを起動\n",
+        "from IPython import get_ipython\n",
+        "from IPython.core import magic_arguments\n",
+        "from IPython.core.magic import register_cell_magic\n",
+        "from IPython.utils.capture import capture_output\n",
+        "\n",
+        "@magic_arguments.magic_arguments()\n",
+        "@magic_arguments.argument('output', type=str, default='', nargs='?',\n",
+        "    help=\"\"\"The name of the variable in which to store output.\n",
+        "    This is a utils.io.CapturedIO object with stdout/err attributes\n",
+        "    for the text of the captured output.\n",
+        "    CapturedOutput also has a show() method for displaying the output,\n",
+        "    and __call__ as well, so you can use that to quickly display the\n",
+        "    output.\n",
+        "    If unspecified, captured output is discarded.\n",
+        "    \"\"\"\n",
+        ")\n",
+        "@magic_arguments.argument('--no-stderr', action=\"store_true\",\n",
+        "    help=\"\"\"Don't capture stderr.\"\"\"\n",
+        ")\n",
+        "@magic_arguments.argument('--no-stdout', action=\"store_true\",\n",
+        "    help=\"\"\"Don't capture stdout.\"\"\"\n",
+        ")\n",
+        "@magic_arguments.argument('--no-display', action=\"store_true\",\n",
+        "    help=\"\"\"Don't capture IPython's rich display.\"\"\"\n",
+        ")\n",
+        "@register_cell_magic\n",
+        "def tee(line, cell):\n",
+        "    args = magic_arguments.parse_argstring(tee, line)\n",
+        "    out = not args.no_stdout\n",
+        "    err = not args.no_stderr\n",
+        "    disp = not args.no_display\n",
+        "    with capture_output(out, err, disp) as io:\n",
+        "        get_ipython().run_cell(cell)\n",
+        "    if args.output:\n",
+        "        get_ipython().user_ns[args.output] = io\n",
+        "\n",
+        "    io()"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "e13blKNWz1_W"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "# 総合演習"
       ],
@@ -26,7 +95,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "多少歯ごたえのあるコードを書きたい人向けです。各々の問題は独立しているので、好きなものから解くことができると思います。ただし、恐らく問題番号順に難易度が上がると思います。"
+        "多少歯ごたえのあるコードを書きたい人向けです。各々の問題は独立しているので、好きなものから解くことができると思います。ただし、恐らく問題番号順に難易度が上がると思います。なお、変数、条件分岐、ループが書けることを前提にしています。"
       ],
       "metadata": {
         "id": "suUuJWtRp9QU"
@@ -335,53 +404,6 @@
       "metadata": {
         "id": "BX81y1n5InYV"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from IPython import get_ipython\n",
-        "from IPython.core import magic_arguments\n",
-        "from IPython.core.magic import register_cell_magic\n",
-        "from IPython.utils.capture import capture_output\n",
-        "\n",
-        "@magic_arguments.magic_arguments()\n",
-        "@magic_arguments.argument('output', type=str, default='', nargs='?',\n",
-        "    help=\"\"\"The name of the variable in which to store output.\n",
-        "    This is a utils.io.CapturedIO object with stdout/err attributes\n",
-        "    for the text of the captured output.\n",
-        "    CapturedOutput also has a show() method for displaying the output,\n",
-        "    and __call__ as well, so you can use that to quickly display the\n",
-        "    output.\n",
-        "    If unspecified, captured output is discarded.\n",
-        "    \"\"\"\n",
-        ")\n",
-        "@magic_arguments.argument('--no-stderr', action=\"store_true\",\n",
-        "    help=\"\"\"Don't capture stderr.\"\"\"\n",
-        ")\n",
-        "@magic_arguments.argument('--no-stdout', action=\"store_true\",\n",
-        "    help=\"\"\"Don't capture stdout.\"\"\"\n",
-        ")\n",
-        "@magic_arguments.argument('--no-display', action=\"store_true\",\n",
-        "    help=\"\"\"Don't capture IPython's rich display.\"\"\"\n",
-        ")\n",
-        "@register_cell_magic\n",
-        "def tee(line, cell):\n",
-        "    args = magic_arguments.parse_argstring(tee, line)\n",
-        "    out = not args.no_stdout\n",
-        "    err = not args.no_stderr\n",
-        "    disp = not args.no_display\n",
-        "    with capture_output(out, err, disp) as io:\n",
-        "        get_ipython().run_cell(cell)\n",
-        "    if args.output:\n",
-        "        get_ipython().user_ns[args.output] = io\n",
-        "\n",
-        "    io()"
-      ],
-      "metadata": {
-        "id": "UCmT5b54ImoM"
-      },
-      "execution_count": 1,
-      "outputs": []
     }
   ]
 }
