Colab を使用して作成されました

--- a/text1.ipynb
+++ b/text1.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/aiko-63180/notebooks/blob/main/text1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -385,6 +374,7 @@
         "\n",
         "    # --- チェック3: 出力があっているか確認する ---\n",
         "    expected_output = f\"{student_name}です、こんにちは！\\n\"\n",
+        "    actual_output = student_output.stdout\n",
         "    if student_output.stdout == expected_output:\n",
         "        print(\"✅ チェック3: 出力が期待通りです。\")\n",
         "        checks_passed += 1\n",
@@ -407,8 +397,7 @@
         "    print(\"=\"*30)"
       ],
       "metadata": {
-        "id": "pLJRxufUHgwh",
-        "cellView": "form"
+        "id": "pLJRxufUHgwh"
       },
       "execution_count": null,
       "outputs": []
