--- a/text1.ipynb
+++ b/text1.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/aiko-63180/notebooks/blob/main/text1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -397,7 +408,8 @@
         "    print(\"=\"*30)"
       ],
       "metadata": {
-        "id": "pLJRxufUHgwh"
+        "id": "pLJRxufUHgwh",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
