Colab を使用して作成されました

--- a/text2.ipynb
+++ b/text2.ipynb
@@ -223,13 +223,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1. 工藤新一くんは17歳です。あなたと工藤新一くんの年齢を比べてみましょう。変数`age`と17を比べて、\n",
+        "1. 工藤新一くんは17歳です。あなたと工藤新一くんの年齢を比べてみましょう。変数`age`にあなたの年齢を入れた後、17と比べて、\n",
         "- `age`の方が大きければ、\"あなたは工藤新一より年上です。\"と、\n",
         "- `age`と同じであれば、\"あなたは工藤新一と同い年です。\"と、\n",
         "- `age`の方が小さければ、\"あなたは工藤新一より年下です。\"と、<br>\n",
-        "出力するプログラムを書いてください。また、`age`にあなたや身近な人の年齢を代入して実行してみましょう。\n",
+        "出力するプログラムを書いてください。\n",
         "\n",
-        "なお、このプログラムは人によって出力が変わるはずなので採点プログラムは用意していません。不安な人は周りの人と確認してみてください。"
+        "なお`age`に入れる値は整数値、つまり16.5歳とかはしないようにしよう。恐らく採点で弾かれます。また、`age`にあなたや身近な人の年齢を代入して実行してみましょう。"
       ],
       "metadata": {
         "id": "1Ne0T0Z_ctwM"
@@ -238,10 +238,74 @@
     {
       "cell_type": "code",
       "source": [
+        "%%tee student_output\n",
         "# ここにコードを書こう\n"
       ],
       "metadata": {
         "id": "VOSAQckCd1KI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title 練習問題1. の採点\n",
+        "\n",
+        "checks_passed = 0\n",
+        "total_checks = 3\n",
+        "\n",
+        "print(\"採点を開始します...\\n\")\n",
+        "\n",
+        "try:\n",
+        "    vars = locals()\n",
+        "    # --- チェック1: `age` という変数が宣言されているか ---\n",
+        "    if 'age' in vars:\n",
+        "        print(\"✅ チェック1: 変数 `age` が宣言されています。\")\n",
+        "        checks_passed += 1\n",
+        "    else:\n",
+        "        print(\"❌ チェック1: 変数 `age` が宣言されていません。\")\n",
+        "        raise AssertionError(\"`age` variable not found.\")\n",
+        "\n",
+        "    # --- チェック2: `age` に非負整数が入っているか ---\n",
+        "    student_age = vars['age']\n",
+        "    if isinstance(student_age, int) and student_age >= 0:\n",
+        "        print(f\"✅ チェック2: 変数 `age` には非負整数 '{student_age}' が入っています。\")\n",
+        "        checks_passed += 1\n",
+        "    else:\n",
+        "        print(\"❌ チェック2: 変数 `age` に整数が入っていません。\")\n",
+        "        raise AssertionError(\"`age` is not a non-empty string.\")\n",
+        "\n",
+        "    # --- チェック3: 出力があっているか確認する ---\n",
+        "    larger = \"あなたは工藤新一より年上です。\\n\"\n",
+        "    equal = \"あなたは工藤新一と同い年です。\\n\"\n",
+        "    smaller = \"あなたは工藤新一より年下です。\\n\"\n",
+        "    expected_output = larger if student_age > 17 else equal if student_age == 17 else smaller\n",
+        "    actual_output = student_output.stdout\n",
+        "    if actual_output == expected_output:\n",
+        "        print(\"✅ チェック3: 出力が期待通りです。\")\n",
+        "        checks_passed += 1\n",
+        "    else:\n",
+        "        print(\"❌ チェック3: 出力が期待通りではありません。\")\n",
+        "        print(\"【あなたの出力】\")\n",
+        "        print(f'\"{actual_output}\"')\n",
+        "        print(\"【期待される出力】\")\n",
+        "        print(f'\"{expected_output}\"')\n",
+        "        raise AssertionError(\"Output mismatch.\")\n",
+        "\n",
+        "except Exception as e:\n",
+        "    print(f\"\\nエラーが発生したため、採点を中断しました。\")\n",
+        "\n",
+        "finally:\n",
+        "    print(\"\\n\" + \"=\"*30)\n",
+        "    print(f\"【採点結果】 {total_checks}項目中 {checks_passed}項目クリア！\")\n",
+        "    if checks_passed == total_checks:\n",
+        "        print(\"🎉 素晴らしい！完璧です！\")\n",
+        "    print(\"=\"*30)"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "sFMmXW0I8Crf"
       },
       "execution_count": null,
       "outputs": []
@@ -377,7 +441,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "2. `for`文を使って、数字の1から20までを1行ずつ順番に表示するプログラムを作成してみよう。"
+        "2. `for`文を使って、数字の1から20までを1行ずつ順番に表示するプログラムを作成してみよう。\n",
+        "\n",
+        "ヒント：`range(n)` は `0,1,...,n-1` の順番に値を入れるが、整数`a,b`に対して `range(a,b)` と書くと、`a,a+1,...,b-1` という順番に値を返すようになる。"
       ],
       "metadata": {
         "id": "G8Ge4FtPg4Dx"
@@ -387,7 +453,9 @@
       "cell_type": "code",
       "source": [
         "%%tee student_output\n",
-        "## この下にコードを記入\n"
+        "## この下にコードを記入\n",
+        "for i in range(1, 21):\n",
+        "    print(i)"
       ],
       "metadata": {
         "id": "gBWYwM7rhRgW"
@@ -411,7 +479,8 @@
         "  print(f'\"{correct_answer}\"')"
       ],
       "metadata": {
-        "id": "Vk04GBPzhYjL"
+        "id": "Vk04GBPzhYjL",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
