--- a/text2.ipynb
+++ b/text2.ipynb
@@ -212,6 +212,20 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "if 1 + 1 == 2: # 一致は = ではなく ==\n",
+        "  print(\"1+1 は 2 です\")\n",
+        "else:\n",
+        "  print(\"1+1 は 2 ではありません\")"
+      ],
+      "metadata": {
+        "id": "FNLtwGc6-Jtg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## 練習問題"
