Colab を使用して作成されました

--- a/text2.ipynb
+++ b/text2.ipynb
@@ -243,7 +243,7 @@
         "- `age`の方が小さければ、\"あなたは工藤新一より年下です。\"と、<br>\n",
         "出力するプログラムを書いてください。\n",
         "\n",
-        "なお`age`に入れる値は整数値、つまり16.5歳とかはしないようにしよう。恐らく採点で弾かれます。また、`age`にあなたや身近な人の年齢を代入して実行してみましょう。"
+        "なお`age`に入れる値は整数値、つまり16.5歳とかはしないようにしましょう。(してもいいが恐らく採点で弾かれます。) また、`age`にあなたや身近な人の年齢を代入して実行してみましょう。"
       ],
       "metadata": {
         "id": "1Ne0T0Z_ctwM"
@@ -515,7 +515,7 @@
     {
       "cell_type": "code",
       "source": [
-        "## ここにコードを書く。"
+        "## ここにコードを書く。\n"
       ],
       "metadata": {
         "id": "RjaHXpv3lPQP"
