Colab を使用して作成されました

--- a/text2.ipynb
+++ b/text2.ipynb
@@ -243,7 +243,7 @@
         "- `age`の方が小さければ、\"あなたは工藤新一より年下です。\"と、<br>\n",
         "出力するプログラムを書いてください。\n",
         "\n",
-        "なお`age`に入れる値は整数値、つまり16.5歳とかはしないようにしましょう。(してもいいが恐らく採点で弾かれます。) また、`age`にあなたや身近な人の年齢を代入して実行してみましょう。"
+        "なお`age`に入れる値は整数値、つまり16.5歳とかはしないようにしよう。恐らく採点で弾かれます。また、`age`にあなたや身近な人の年齢を代入して実行してみましょう。"
       ],
       "metadata": {
         "id": "1Ne0T0Z_ctwM"
@@ -467,9 +467,7 @@
       "cell_type": "code",
       "source": [
         "%%tee student_output\n",
-        "## この下にコードを記入\n",
-        "for i in range(1, 21):\n",
-        "    print(i)"
+        "## この下にコードを記入\n"
       ],
       "metadata": {
         "id": "gBWYwM7rhRgW"
