Colab を使用して作成されました

--- a/text2.ipynb
+++ b/text2.ipynb
@@ -346,31 +346,10 @@
       "cell_type": "markdown",
       "source": [
         "### for 文の基本的な書き方\n",
-        "例えば、「ありがとう」を100回表示したい場合、100回 `print()` を書くのは大変です。その代わりにループ処理を書けば数行で書くことができます。"
+        "例えば、「ありがとう」を100回表示したい場合、100回 `print()` を書くのは大変です。その代わりにループ処理を書けば2行で書くことができます。"
       ],
       "metadata": {
         "id": "PIxaFBw9ZqjY"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "for i in range(5):\n",
-        "    print(\"ありがとう\")"
-      ],
-      "metadata": {
-        "id": "IJktQL_lZuN4"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "`i` という変数には、今が何回目の繰り返しなのか `0, 1, 2, 3, ..., 100` が順番に入ります。\n"
-      ],
-      "metadata": {
-        "id": "-AJn_rSqZvuB"
       }
     },
     {
@@ -384,6 +363,17 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`i` という変数には、今が何回目の繰り返しなのか `0, 1, 2, 3, ..., 99` が順番に入ります。\n",
+        "\n",
+        "また`range` ってなんだと思う人もいるかもしれませんが、今の段階ではそういう\"おまじない”のようなものだと考えてもらって構いません。"
+      ],
+      "metadata": {
+        "id": "-AJn_rSqZvuB"
+      }
     },
     {
       "cell_type": "markdown",
